2018/01/10 v216
	1. "As Global" menu added for the action bar, so the action bar should be used by all characters and all specialization.

2017/12/21 v214
	1. You can choose "Only Enemy" for the unit watch panel.
	2. When use "nameplate%d" unit in unit watch panel, move mouse in it, the nameplate should show an arrow to high ligh it.

2017/12/02 v213
	1. Fix the quest mark on nameplates for multi-quest target.

2017/12/02 v212
	1. Modify the minimaptrack's framestrata, so it won't block the instance difficulty icon.

2017/12/01 v211
	1. Fix the fade settings for the new opened chat frame.

2017/11/30 v208
	1. Fix the contaner view system error when there are 10 containers in one view.

2017/11/30 v207
	1. [mod:shift][mod:ctrl][mod:alt] is added for macro conditons.

2017/11/29 v205
	1. The action bar support Masque now.
	2. If an action bar has only one button with its branches, you can use "Square Layout" or "Circle Layout" to change their locations with more easy ways.
	3. Two new action map : World Markder, Raid target.

2017/10/25 v203
	1. Fix the minimap for EnhanceBattlefieldMinimap.

2017/09/21 v201
	1. Fix auto repair.

2017/09/17 v199
	1. Add quest mark on nameplates.

2017/09/10 v197
	1. Fix a alpha error caused by button recycle.

2017/09/04 v196
	1. A little modification for the display style, If you don't need it, you can modify the ShareFeatures.lua change BORDER_SIZE to 1 to change back.
	2. The runes are now ordered to be easy using.

2017/09/02 v195
	1. Block the auto guild repair since it's protected.

2017/08/29 v193
	1. The container view's scale can be changed within the menu.

2017/08/24 v192
	1. The cooldown label won't display for global cooldown on the action buttons.

2017/08/14 v191
	1. Fix bugs for the opacity mechanism.
	2. The opacity will only affect when lock the bars.

2017/08/14 v190
	1. Max opacity and min opacity settings are added for the action bar.

2017/06/17 v189
	1. Fix the tip for tokens.

2017/05/21 v188